src/main/resources/static/css/playgame.css
body {
    text-align: center;
    justify-content: center;
    color: rgb(59, 47, 93, .85);
    }

h1 {
    font-weight: 500;
    color: rgb(59, 47, 93, .90);
}

.card-placeholder-left {
    width: 250px;
    height: 432px;
    background-color: rgba(194, 249, 255, 1);
    border: 2px dashed #999;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #666;
    font-style: italic;
    font-size: 1rem;
    user-select: none;
    border-radius: 8px;
    box-shadow: inset 0 0 5px #aaa;
    margin: 0 auto;
}

.card-placeholder-right {
    width: 250px;
    height: 432px;
    background-color: rgba(255, 194, 194, 1);
    border: 2px dashed #999;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #666;
    font-style: italic;
    font-size: 1rem;
    user-select: none;
    border-radius: 8px;
    box-shadow: inset 0 0 5px #aaa;
    margin: 0 auto;
}

body.dark-theme .card-placeholder-left {
    background-color: rgba(53, 103, 220, 1);
    border: 2px dashed #383838;
    color: rgb(221, 221, 221);
}

body.dark-theme .card-placeholder-right {
    background-color: rgba(220, 53, 69, 1);
    border: 2px dashed #383838;
    color: rgb(221, 221, 221);
}

.card-placeholder-container {
    text-align: center;
    justify-content: center;
    align-items: center;
}

.game-round-display {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 100px;
    margin-top: 20px;
    flex-wrap: wrap;
}

.final-card-container .card-wrap {
    width: 250px;
    min-height: 400px;
    padding: 6px;
}

.final-card-container .card-image-box {
    height: 230px;
}

.final-card-container .card-name {
    font-size: 1rem;
}

.final-card-container .card-text-box,
.final-card-container .stat-text-box,
.final-card-container .unique-stat-box {
    font-size: 0.95rem;
}

.final-card-container .stat-text-box {
    font-size: 0.95rem;
    flex: 1;
    margin: 0.1em auto 0.1em;
}

.stat-row {
        display: flex;
        gap: 0.1em;
        justify-content: center;
        }

.final-card-container {
    text-align: center;
    width: 280px;
    flex-shrink: 0;
    flex-grow: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.vs-image {
      max-height: 100%;
}

.form-stat-container {
    display: flex;
    gap: 0.1em;
    justify-content: space-between;
    width: 100%;
}

.form-stat-container form {
    flex: 1;
    margin: 0;
}

/*Might need dot in name*/
form button {
    width: 100%;
    display: block;
    text-align: center;
}

.vs-image-container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 300px;
    margin-top: 20px;
    margin-left: 40px;
    margin-right: 40px;
    margin-top: 90px;
}

.main-button-success {
    background: linear-gradient(-45deg, rgba(194, 249, 255, 1) 0%, rgba(255, 194, 194, 1) 100%);
    color: black;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 0.5rem 1rem;
    font-weight: bold;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: all 0.2s ease-in-out;
}

body.dark-theme .main-button-success {
    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
}

.main-button-success:hover {
    transform: translateY(-2px);
    opacity: 0.95;
    border-color: rgba(0, 0, 0, 0.4);
    color: #28a745;
}

.main-button-neutral {
    background: linear-gradient(-45deg, rgba(194, 249, 255, 1) 0%, rgba(255, 194, 194, 1) 100%);
    color: black;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 0.5rem 1rem;
    font-weight: bold;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: all 0.2s ease-in-out;
}

body.dark-theme .main-button-neutral {
    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
}

.main-button-neutral:hover {
    transform: translateY(-2px);
    opacity: 0.95;
    border-color: rgba(0, 0, 0, 0.4);
    color: black;
}

.main-button-warning {
    background: linear-gradient(-45deg, rgba(194, 249, 255, 1) 0%, rgba(255, 194, 194, 1) 100%);
    color: black;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 0.5rem 1rem;
    font-weight: bold;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: all 0.2s ease-in-out;
}

body.dark-theme .main-button-warning {
    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
}

.main-button-warning:hover {
    transform: translateY(-2px);
    opacity: 0.95;
    border-color: rgba(0, 0, 0, 0.4);
    color: red;
}

.score-container {
    vertical-align: top;
}

.reveal {
    background: linear-gradient(-45deg, rgba(194, 249, 255, 1) 0%, rgba(255, 194, 194, 1) 100%);
    color: black;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 10px 10px;
    width: 270px;
    text-align: center;
}

body.dark-theme .reveal {
    background: linear-gradient(350deg,rgba(53, 103, 220, 1) 0%, rgba(220, 53, 69, 1) 100%);
}

.score-reveal-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 469px;
}

.cpu-stat-container {
    background: #79c9d9;
    background: linear-gradient(148deg, rgb(174, 216, 224) 0%, rgb(128, 122, 196) 64%, rgb(194, 91, 91) 94%);
    color: white;
    border: 2px solid rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 10px 10px;
    width: 270px;
    text-align: center;
}

body.dark-theme .cpu-stat-container {
    background: linear-gradient(148deg, rgb(53, 145, 220) 0%, rgb(58, 48, 92) 64%, rgb(148, 45, 93) 94%);
}

